tests/toy/neg/001016_mutation.toylang
program a = { if a then sleep else do sleep; } .
